--- a/HomeWork_S_Horiunov/index.html
+++ b/HomeWork_S_Horiunov/index.html
@@ -11,5 +11,6 @@
     <h1>Home Work 10</h1>
     <h2>Author Serhii Horiunov</h2>
     <script src="./js/script.js"></script>
+    <script src="./js/uuid.js"></script>
   </body>
 </html>
