--- a/HomeWork_S_Horiunov/index.html
+++ b/HomeWork_S_Horiunov/index.html
@@ -10,6 +10,16 @@
   <body>
     <h1>Home Work 10</h1>
     <h2>Author Serhii Horiunov</h2>
+    <form class="form">
+      <p>Name</p>
+      <input id="name" class="inputName">
+      <p>Last Name</p>
+      <input id="lastName" class="inputLastName">
+      <input type="radio" name="radio" value="female">Female</br>
+      <input type="radio" name="radio" value="male">Male</br>
+      <p>Got 18?</p>
+      <input type="checkbox" id="age">
+    </form>
     <script src="./js/script.js"></script>
     <script src="./js/uuid.js"></script>
   </body>
