--- a/HomeWork_S_Horiunov/index.html
+++ b/HomeWork_S_Horiunov/index.html
@@ -10,17 +10,21 @@
   <body>
     <h1>Home Work 10</h1>
     <h2>Author Serhii Horiunov</h2>
-    <form class="form">
-      <p>Name</p>
-      <input id="name" class="inputName">
-      <p>Last Name</p>
-      <input id="lastName" class="inputLastName">
-      <input type="radio" name="radio" value="female">Female</br>
-      <input type="radio" name="radio" value="male">Male</br>
-      <p>Got 18?</p>
-      <input type="checkbox" id="age">
-    </form>
+     <form id="form">
+      <label>First Name</label>
+      <input id="name" name="name" type="text">
+      <label>Last Name</label>
+      <input id="lastname" name="lastname" type="text">
+      <label>Age</label>
+      <input id="age" name="age" type="number">
+      <label>Country</label>
+      <select name="country" id="'country">
+          <option value="1">Ukraine</option>
+          <option value="2">Czech</option>
+          <option value="3">Germany</option>
+      </select>
+    </form> 
     <script src="./js/script.js"></script>
-    <script src="./js/uuid.js"></script>
+    <!-- <script src="./js/uuid.js"></script> -->
   </body>
 </html>
